--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "react": "^16.3.0",
+    "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.3.0",
+    "react-dom": "^16.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "^1.1.1",
+    "webpack": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +19,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.1"
   }
