--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.11.0"
   },
   "scripts": {
