--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^1.1.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "thunk": "0.0.1",
     "webpack": "^3.11.0"
   },
   "scripts": {
