--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "proxy": "http://127.0.0.1:8000/",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.0.0",
+    "ajv": "^6.5.0",
+    "ajv-keywords": "^3.2.0",
+    "bootstrap": "^4.1.1",
     "crypto-js": "^3.1.9-1",
     "google-maps-react": "^2.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
@@ -18,7 +22,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "thunk": "0.0.1",
-    "webpack": "^3.11.0"
+    "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^3.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,7 +36,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^7.1.4",
     "webpack-bundle-tracker": "^0.3.0",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.3"
   }
 }
