--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "crypto-js": "^3.1.9-1",
     "google-maps-react": "^2.0.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "popper.js": "^1.14.3",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
