--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
+    "recompose": "^0.27.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "thunk": "0.0.1",
